# rrise

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bindings.rs  build.rs
.cargo/: config.toml
c/: ak.h
c/utilities/: default_streaming_mgr.cpp
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/rrise/: all.html  constant.AK_DEFAULT_BANK_IO_PRIORITY.html  constant.AK_DEFAULT_BANK_THROUGHPUT.html  constant.AK_DEFAULT_POOL_ID.html  constant.AK_DEFAULT_PRIORITY.html  constant.AK_DEFAULT_SWITCH_STATE.html  constant.AK_FALLBACK_ARGUMENTVALUE_ID.html  constant.AK_INVALID_AUDIO_OBJECT_ID.html  constant.AK_INVALID_AUX_ID.html  constant.AK_INVALID_BANK_ID.html  constant.AK_INVALID_CHANNELMASK.html  constant.AK_INVALID_DEVICE_ID.html  constant.AK_INVALID_FILE_ID.html  constant.AK_INVALID_GAME_OBJECT.html  constant.AK_INVALID_OUTPUT_DEVICE_ID.html  constant.AK_INVALID_PIPELINE_ID.html  constant.AK_INVALID_PLAYING_ID.html  constant.AK_INVALID_PLUGINID.html  constant.AK_INVALID_POOL_ID.html  constant.AK_INVALID_RTPC_ID.html  constant.AK_INVALID_UNIQUE_ID.html  constant.AK_MAX_PRIORITY.html  constant.AK_MIN_PRIORITY.html  constant.AK_SOUNDBANK_VERSION.html  enum.AkCallbackInfo.html  enum.AkCurveInterpolation.html  enum.AkID.html  enum.AkMIDIEvent.html  enum.AkPanningRule.html  enum.AkResult.html  index.html  sidebar-items.js  struct.AkCallbackType.html  struct.AkChannelConfig.html  struct.AkMIDIEvent_tCc.html  struct.AkMIDIEvent_tChanAftertouch.html  struct.AkMIDIEvent_tGen.html  struct.AkMIDIEvent_tNoteAftertouch.html  struct.AkMIDIEvent_tNoteOnOff.html  struct.AkMIDIEvent_tPitchBend.html  (+48 more)
docs/rrise/bindings/: constant.AK_INVALID_AUDIO_OBJECT_ID.html  constant.AK_INVALID_GAME_OBJECT.html
docs/rrise/communication/: fn.init.html  fn.term.html  index.html  sidebar-items.js
docs/rrise/game_syncs/: fn.post_trigger.html  fn.set_state.html  fn.set_switch.html  index.html  sidebar-items.js  struct.SetRtpcValue.html
docs/rrise/memory_mgr/: fn.init.html  fn.is_initialized.html  fn.term.html  index.html  sidebar-items.js
docs/rrise/music_engine/: fn.init.html  fn.term.html  index.html  sidebar-items.js
docs/rrise/query_params/: enum.RtpcValueType.html  fn.get_listener_position.html  fn.get_listeners.html  fn.get_listeners_count.html  fn.get_position.html  fn.get_rtpc_value.html  fn.get_state.html  fn.get_switch.html  index.html  sidebar-items.js
docs/rrise/settings/: index.html  sidebar-items.js  struct.AkCommSettings.html  struct.AkDeviceSettings.html  struct.AkInitSettings.html  struct.AkInitSettingsPrivate.html  struct.AkMemSettings.html  struct.AkMusicSettings.html  struct.AkPlatformInitSettings.html  struct.AkStreamMgrSettings.html
docs/rrise/sound_engine/: fn.add_default_listener.html  fn.add_listener.html  fn.init.html  fn.is_initialized.html  fn.load_bank_by_name.html  fn.register_game_obj.html  fn.register_named_game_obj.html  fn.remove_default_listener.html  fn.remove_listener.html  fn.render_audio.html  fn.set_default_listeners.html  fn.set_listeners.html  fn.set_position.html  fn.stop_all.html  fn.term.html  fn.unregister_all_game_obj.html  fn.unregister_game_obj.html  index.html  sidebar-items.js  struct.PostEvent.html
docs/rrise/stream_mgr/: fn.init.html  fn.init_default_stream_mgr.html  fn.set_current_language.html  fn.term_default_stream_mgr.html  index.html  sidebar-items.js
docs/src/rrise/: bindings.rs.html  bindings_static_plugins.rs.html  communication.rs.html  error.rs.html  game_syncs.rs.html  memory_mgr.rs.html  music_engine.rs.html  query_params.rs.html  rrise.rs.html  settings.rs.html  sound_engine.rs.html  stream_mgr.rs.html  transform.rs.html
examples/: bevy_music_visualizer.rs  doppler.rs  doppler_2021.rs  doppler_legacy.rs  looping_event.rs  looping_event_legacy.rs  rooms_and_portals.rs  windows_sample.rs
examples/WwiseProject/: WwiseTest_WwiseProject.wproj
examples/WwiseProject/Actor-Mixer Hierarchy/: Default Work Unit.wwu
examples/WwiseProject/Attenuations/: Default Work Unit.wwu
examples/WwiseProject/Audio Devices/: Default Work Unit.wwu
examples/WwiseProject/Control Surface Sessions/: Default Work Unit.wwu
examples/WwiseProject/Conversion Settings/: Default Work Unit.wwu  Factory Conversion Settings.wwu
examples/WwiseProject/Dynamic Dialogue/: Default Work Unit.wwu
examples/WwiseProject/Effects/: Default Work Unit.wwu  Factory Effects.wwu
examples/WwiseProject/Events/: Default Work Unit.wwu
examples/WwiseProject/Game Parameters/: Default Work Unit.wwu
examples/WwiseProject/Interactive Music Hierarchy/: Default Work Unit.wwu
examples/WwiseProject/Master-Mixer Hierarchy/: Default Work Unit.wwu
examples/WwiseProject/Metadata/: Default Work Unit.wwu
examples/WwiseProject/Mixing Sessions/: Default Work Unit.wwu
examples/WwiseProject/Modulators/: Default Work Unit.wwu
examples/WwiseProject/Presets/: Default Work Unit.wwu
examples/WwiseProject/Queries/: Default Work Unit.wwu
examples/WwiseProject/SoundBanks/: Default Work Unit.wwu
examples/WwiseProject/Soundcaster Sessions/: Default Work Unit.wwu
examples/WwiseProject/States/: Default Work Unit.wwu
examples/WwiseProject/Switches/: Default Work Unit.wwu
examples/WwiseProject/Triggers/: Default Work Unit.wwu
examples/WwiseProject/Virtual Acoustics/: Default Work Unit.wwu
examples/WwiseProject_legacy/: WwiseTest_WwiseProject_legacy.wproj
examples/WwiseProject_legacy/Actor-Mixer Hierarchy/: Default Work Unit.wwu
examples/WwiseProject_legacy/Attenuations/: Default Work Unit.wwu
examples/WwiseProject_legacy/Dynamic Dialogue/: Default Work Unit.wwu
rrise-headers/: Cargo.toml  README.md  build.rs
rrise-headers/src/: lib.rs  rr.rs
src/: bindings.rs  bindings_static_plugins.rs  communication.rs  error.rs  memory_mgr.rs  music_engine.rs  query_params.rs  rrise.rs  settings.rs  sound_engine.rs  spatial_audio.rs  stream_mgr.rs  transform_current.rs
src/spatial_audio/: geometry.rs  image_source.rs  room.rs
tests/: one_frame_render_legacy.rs  static_link_all.rs  static_link_all_legacy.rs
tests/common/: mod.rs
(+117 files in other folders)
