[package]
name = "rrise"
version = "0.1.7"
edition = "2021"
authors = ["David Taralla <davidtaralla@gmail.com> & Contributors to the Rrise project"]
description = "A rust binding for Wwise"
repository = "https://github.com/dtaralla/rrise"
documentation = "https://dtaralla.github.io/rrise/"
readme = "README.md"
keywords = ["library", "sound", "3D", "wwise"]
categories = ["multimedia", "game-development"]
license-file = "LICENSE"
exclude = [
    "/examples/WwiseProject/Originals",
]

[dependencies]
ctrlc = { version = "3.2.1", optional = true }
simple_logger = { version = "2.1.0", optional = true }
lerp = { version = "0.4.0", optional = true }
bevy = { version = "0.7.0", optional = true, default-features = false, features = ["render"] }
paste = "1.0.7"
log = "0.4.16"

[build-dependencies]
bindgen = "0.59.2"
cc = { version = "1.0.73", features = ["parallel"] }
paste = "1.0.7"

[target.'cfg(windows)'.build-dependencies.winreg]
version = "0.10.1"

[target.'cfg(windows)'.dependencies.bevy]
version = "0.7.0"
optional = true
default-features = false
features = ["bevy_winit", "bevy_gltf"]

[target.'cfg(target_os = "linux")'.dependencies.bevy]
version = "0.7.0"
optional = true
default-features = false
features = ["x11"]

[lib]
name = "rrise"
path = "src/rrise.rs"
crate-type = ["dylib", "rlib"]

[features]
default = ["AkVorbisDecoder", "AkMeterFX"]
AkVorbisDecoder = []
AkOpusDecoder = ["AkOggOpusDecoder", "AkWemOpusDecoder"]
AkAudioInputSource = []
AkCompressorFX = []
AkDelayFX = []
AkExpanderFX = []
AkFlangerFX = []
AkGainFX = []
AkGuitarDistortionFX = []
AkHarmonizerFX = []
AkMatrixReverbFX = []
AkMeterFX = []
AkParametricEQFX = []
AkPeakLimiterFX = []
AkPitchShifterFX = []
AkRecorderFX = []
AkRoomVerbFX = []
AkSilenceSource = []
AkSineSource = []
AkStereoDelayFX = []
AkSynthOneSource = []
AkTimeStretchFX = []
AkToneSource = []
AkTremoloFX = []
# Internal features, don't enable independantly!
AkOggOpusDecoder = []
AkWemOpusDecoder = []
examples = ["ctrlc", "simple_logger", "lerp"]

[[example]]
name = "looping_event"
required-features = ["examples"]

[[example]]
name = "doppler"
required-features = ["examples", "AkSineSource"]

[[example]]
name = "bevy_music_visualizer"
required-features = ["AkMeterFX", "AkParametricEQFX", "bevy"]

[[test]]
name = "static_link_all"
required-features = [
    "AkVorbisDecoder",
    "AkOpusDecoder",
    "AkAudioInputSource",
    "AkCompressorFX",
    "AkDelayFX",
    "AkExpanderFX",
    "AkFlangerFX",
    "AkGainFX",
    "AkGuitarDistortionFX",
    "AkHarmonizerFX",
    "AkMatrixReverbFX",
    "AkMeterFX",
    "AkParametricEQFX",
    "AkPeakLimiterFX",
    "AkPitchShifterFX",
    "AkRecorderFX",
    "AkRoomVerbFX",
    "AkSilenceSource",
    "AkSineSource",
    "AkStereoDelayFX",
    "AkSynthOneSource",
    "AkTimeStretchFX",
    "AkToneSource",
    "AkTremoloFX"
]